--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.3.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
+    "use-local-storage": "^2.3.6",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
