--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "rc-checkbox": "^2.3.2",
     "react": "^17.0.2",
+    "react-confirm-box": "^1.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-reveal": "^1.2.2",
