--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "use-local-storage": "^2.3.6",
     "uuid": "^8.3.2",
