--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.3",
     "use-local-storage": "^2.3.6",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
